fixes map spacing per new nav & enlargens map

--- a/src/components/map-components/Map.scss
+++ b/src/components/map-components/Map.scss
@@ -5,7 +5,7 @@
 /* this is the map container */
 .main-map {
     margin: 0 auto;
-    padding-top:68px;
+    padding-top:95px;
     margin-bottom:20px;
     max-width:90%;
 }
